# ppois

Dictionary/: CMakeLists.txt  Dictionary.h
SmartCityModel/: Readme.md  cli.py  testy.py
SmartCityModel/citizens/: __init__.py  models.py  repository.py
SmartCityModel/city/: __init__.py  smart_city.py
SmartCityModel/core/: __init__.py  base.py  enums.py  exceptions.py  helpers.py  utils.py
SmartCityModel/data/: users_db.json
SmartCityModel/energy/: __init__.py  devices.py  generation.py  grid.py  lighting.py
SmartCityModel/environment/: __init__.py  monitoring.py  ui.py
SmartCityModel/sensors/: __init__.py  base_sensor.py  energy_sensors.py  environment_sensors.py  traffic_sensors.py  ui.py
SmartCityModel/services/: __init__.py  base.py  education.py  hospital.py  ui.py  utilities.py
SmartCityModel/tests/: test_citizens.py  test_city.py  test_core.py  test_energy.py  test_environment.py  test_sensors.py  test_services.py  test_transport.py  test_ui.py  test_urban_planning.py
SmartCityModel/transport/: __init__.py  models.py  monitoring.py  traffic_control.py  ui.py
SmartCityModel/ui/: __init__.py  city_ui.py  energy_ui.py  environment_ui.py  helpers.py  sensors_ui.py  services_ui.py  transport_ui.py  urban_planning_ui.py
SmartCityModel/urban_planning/: __init__.py  analyzer.py  models.py  ui.py
catalog/: output.xml  test.py
catalog/data/: catalog.xml
catalog/model/: book.py  book_manager.py  xml_handler.py
lab1/: .gitignore  Doxyfile  dictionary.txt
lab1/Cantor_Set/: .gitignore  CMakeLists.txt  main.cpp
lab1/Cantor_Set/Cantor_set/: CMakeLists.txt  set.cpp  set.h  set_manager.cpp  set_manager.h  string_validator.cpp  string_validator.h
lab1/Cantor_Set/Tests/: CMakeLists.txt  set_manager_tests.cpp  set_tests.cpp  string_validator_tests.cpp
lab1/English_russian_dictionary/: CMakeLists.txt  main.cpp
lab1/English_russian_dictionary/Dictionary/: Binary_tree.h  Dictionary.cpp  String_validator.cpp  String_validator.h
lab1/English_russian_dictionary/Tests/: DictionaryTest.cpp  String_validator_test.cpp
lab1/Tests/: Binary_tree_test.cpp  CMakeLists.txt
lab2/Planetarium/: .gitignore  CMakeLists.txt  Readme.md
lab2/Planetarium/Events/: Activity.cpp  Activity.h  CMakeLists.txt  Event.cpp  Event.h  Excursion.cpp  Excursion.h  Lecture.cpp  Lecture.h  Observation.cpp  Observation.h  Stargazing.cpp  Stargazing.h
lab2/Planetarium/Exceptions/: BadWeather.cpp  BadWeather.h  BreakingRules.cpp  BreakingRules.h  CMakeLists.txt  CantUseDevice.cpp  CantUseDevice.h  CapacityExceededException.cpp  CapacityExceededException.h  DegreeRangeError.cpp  DegreeRangeError.h  DeviceCapabilityException.cpp  DeviceCapabilityException.h  DeviceSwitchedOff.cpp  DeviceSwitchedOff.h  IncompatibleDevices.cpp  IncompatibleDevices.h  NonWorkingHoursException.cpp  NonWorkingHoursException.h  ObjectIsNotVisible.cpp  ObjectIsNotVisible.h  PlanetariumException.cpp  PlanetariumException.h  VenueClosedException.cpp  VenueClosedException.h  VenueIsEmpty.cpp  VenueIsEmpty.h
lab2/Planetarium/Facade/: Auditorium.cpp  Auditorium.h  CMakeLists.txt  Museum.cpp  Museum.h  Observatory.cpp  Observatory.h  PlanetariumFacade.cpp  PlanetariumFacade.h  PlanetariumVenue.cpp  PlanetariumVenue.h  StarHall.cpp  StarHall.h
lab2/Planetarium/Inventory/: AudioDevice.cpp  AudioDevice.h  AudioSystem.cpp  AudioSystem.h  CMakeLists.txt  Device.cpp  Device.h  DomeShapedScreen.cpp  DomeShapedScreen.h  Exhibit.cpp  Exhibit.h  InteractiveWhiteboard.cpp  InteractiveWhiteboard.h  Microphone.cpp  Microphone.h  PlanetariumProjector.cpp  PlanetariumProjector.h  Projector.cpp  Projector.h  RemoteControl.cpp  RemoteControl.h  Screen.cpp  Screen.h  Seating.cpp  Seating.h  Speaker.cpp  Speaker.h  Telescope.cpp  Telescope.h
lab2/Planetarium/People/: CMakeLists.txt  Employee.cpp  Employee.h  Human.cpp  Human.h  Visitor.cpp  Visitor.h
lab2/Planetarium/Service/: CMakeLists.txt  PriceCalculator.cpp  PriceCalculator.h  Schedule.cpp  Schedule.h  Ticket.cpp  Ticket.h  TicketOffice.cpp  TicketOffice.h
lab2/Planetarium/Sky/: AstronomicalObject.cpp  AstronomicalObject.h  CMakeLists.txt  Moon.cpp  Moon.h  Planet.cpp  Planet.h  SkyPosition.cpp  SkyPosition.h  Star.cpp  Star.h
lab2/Planetarium/Tests/: CMakeLists.txt  EventsTest.cpp  FacadeTest.cpp  InventoryTest.cpp  PeopleTest.cpp  ServiceTest.cpp  SkyTest.cpp  UtilsTest.cpp  ValidationTest.cpp
lab2/Planetarium/Utils/: CMakeLists.txt  Date.cpp  Date.h  Enums.h  MyTime.cpp  MyTime.h  Weather.cpp  Weather.h
lab2/Planetarium/Validation/: CMakeLists.txt  StringValidator.cpp  StringValidator.h  TimeValidator.cpp  TimeValidator.h
