project(Facade)

add_library(Facade
        Auditorium.cpp
        Auditorium.h
        Museum.cpp
        Museum.h
        Observatory.cpp
        Observatory.h
        PlanetariumFacade.cpp
        PlanetariumFacade.h
        PlanetariumVenue.cpp
        PlanetariumVenue.h
        StarHall.cpp
        StarHall.h
)